compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/access_modifier/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
  [error]: struct or enum implementation members must have access modifiers
    ╭─[compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/access_modifier/main.pnx:35:14]
 34 │     # This should generate an error: ADT members must have access modifiers
 35 │     function enumHelper():
    ·              ─────┬────
    ·                   ╰── implementation function `main::[implements MyEnum]::enumHelper` is missing an access modifier
 36 │         pass
    ╰────
  help: add an access modifier (`public`, `private`, or `internal`) to this member

  [error]: trait implementation members cannot have access modifiers
    ╭─[compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/access_modifier/main.pnx:13:5]
 12 │     # This should generate an error: trait members cannot have access modifiers
 13 │     public function display():
    ·     ───┬──
    ·        ╰── implementation function `main::[implements Displayable[MyStruct]]::display` cannot have an access modifier
 14 │         pass
    ╰────
  help: remove the access modifier from this member

  [error]: struct or enum implementation members must have access modifiers
    ╭─[compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/access_modifier/main.pnx:19:14]
 18 │     # This should generate an error: ADT members must have access modifiers
 19 │     function helper():
    ·              ───┬──
    ·                 ╰── implementation function `main::[implements MyStruct]::helper` is missing an access modifier
 20 │         pass
    ╰────
  help: add an access modifier (`public`, `private`, or `internal`) to this member

  [error]: Compilation aborted due to 3 error(s)



stdout:
